--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "path": "^0.12.7",
     "body-parser": "^1.15.2",
+    "cors": "^2.7.1",
     "d3": "^4.0.0",
     "express": "^4.14.0",
-    "cors": "^2.7.1"
+    "nodemon": "^1.11.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {},
   "repository": {
