--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "nodemon": "^1.11.0",
     "path": "^0.12.7"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-preset-es2015": "^6.18.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mtham8/D3Sandbox.git"
