--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.7.1",
     "d3": "^4.0.0",
     "express": "^4.14.0",
+    "jquery": "^3.1.1",
     "nodemon": "^1.11.0",
     "path": "^0.12.7"
   },
